# shooting-star

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-ALL  Makefile  README.md  build.ps1  build.rs  build.sh  test.c  tpl.h
.github/workflows/: docs.yml
docs/: usage.md
examples/: common.rs  shader.vert  simple.rs
exh2imh/: README.md  exh2imh.rs
sample/: .gitignore  Cargo.toml  README.md  clear_screen.c  images.c  rectangles.c
sample/src/: main.rs
src/: app.rs  bitmap.rs  common_window_vulkan.h  error.c  error.h  fireball.h  font.rs  input.h  lib.rs  log.rs  main.c  main.rs  shader.frag  shader.vert  shaders.rs  sstar.h  tpl.h  vulkan.c  vulkan.h  vulkan.rs  window.c  window.h  window.rs  window_linux.c  window_windows.c
src/app/: general.rs  graphics.rs  input.rs  load.rs
src/bitmap/: font.rs  image.rs
src/fireball/: fireball.c  logger.c
src/input/: linux.c
src/shaders/: shader.frag.spv  shader.vert.spv
src/sstar/: logger.c  sstar.c
src/tpl/common/: type.txt
src/vulkan/: additions.rs  buffer.rs  common.rs  descriptor_sets.c  general.c  image.c  image.rs  load.rs  math.rs  model.rs  new.rs  obj.rs  private.h  render.rs  rendering.c  terminate.rs  texture.rs  vulkan_general.c  vulkan_image.c  vulkan_private.h  vulkan_rendering.c
src/window/: linux.c  linux.rs  windows.c  windows.rs
subtools/bin2c/: .gitignore  README.md  bin2c.rs
subtools/cpin/: .gitignore  README.md  cpin.rs
subtools/dev/: README.md  dev.rs
subtools/exh2imh/: .gitignore
tpl/: tpl.c  tpl.h
tpl/options/common/: function.txt  functions.txt  type.txt  var.txt
(+6 files in other folders)
