[package]
name = "sstar"
version = "0.1.3"
edition = "2021"
license = "CC0-1.0"
description = "A small frontend framework for 2D game."
authors = ["Tengu712 <genreihoutengu@gmail.com>"]
repository = "https://github.com/Tengu712/shooting-star/"
documentation = "https://docs.rs/sstar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.79"
